# cli-civileng

./: .gitignore  AGENTS.md  README.md  config.yaml.example  install.ps1  install.sh  pyproject.toml  setup.bat  setup.sh
cli_civileng/: config.py  main.py
cli_civileng/checker/: engine.py
cli_civileng/commands/: extract_rules.py  validate.py
cli_civileng/extractors/: pdf_extractor.py  project_pdf_extractor.py  xlsx_extractor.py
cli_civileng/llm/: client.py
cli_civileng/reporter/: html_reporter.py
cli_civileng/reporter/templates/: report.html.j2
tests/: conftest.py  test_client.py  test_config.py  test_engine.py  test_extract_rules.py  test_project_pdf.py  test_validate.py  test_xlsx_extractor.py
