[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-civileng"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pymupdf>=1.23",
    "openpyxl>=3.1",
    "openai>=1.0",
    "jinja2>=3.1",
    "gitpython>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
cli-civileng = "cli_civileng.main:cli"

[tool.setuptools.packages.find]
include = ["cli_civileng*"]
